# realestate-search

./: .gitignore  README.md  pyproject.toml
re_search/: __init__.py  cli.py  config.py  db.py  schema.sql
re_search/ai/: __init__.py
re_search/fengshui/: __init__.py  cli.py  eval.py
re_search/geo/: __init__.py  area_codes.py  cli.py  geocode.py  normalize.py
re_search/heritage/: __init__.py  cli.py  manual.py  score.py
re_search/ingest/: __init__.py  cli.py  manual.py  osm.py  poi.py
re_search/redev/: __init__.py  cli.py  manual.py
re_search/score/: __init__.py  cli.py  livability.py
re_search/search/: __init__.py
re_search/tui/: __init__.py
re_search/utils/: __init__.py  distance.py  ratelimit.py
re_search/web/: __init__.py  app.py
re_search/web/templates/: base.html  index.html  listing.html
tests/: test_distance.py  test_phase05_geocode.py  test_phase05_normalize.py  test_phase0_init.py  test_phase1_ingest.py  test_phase1_osm.py  test_phase2_score.py  test_phase3_web.py
