[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "re-search"
version = "0.0.1"
description = "東京23区の賃貸物件を、沿革・風水・建替計画も込みで探す個人用 CLI"
requires-python = ">=3.11"
authors = [{ name = "shoheimiyahara" }]
readme = "README.md"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "httpx>=0.27",
  "platformdirs>=4.0",
  "pyyaml>=6.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
re = "re_search.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["re_search"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
